<resources>
    <string name="app_name">Balingo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai">Mulai</string>
    <string name="sudah_punya_akun">saya sudah punya akun</string>
    <string name="belajar">Belajar Bahasa Bali lebih mudah dengan Balingo!</string>
    <string name="balingo">BALINGO</string>
    <string name="dosen">Ibu Ratih adalah dosen baik se-Informatika ITS</string>
    <string name="tigamnt">3 Menit/ Hari</string>
    <string name="sepuluhmnt">10 Menit/ Hari</string>
    <string name="limaBelasmnt">15 Menit/ Hari</string>
    <string name="tigaPuluhmnt">30 Menit/ Hari</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="kosakata">KOSAKATA BARU</string>
    <string name="pilihgambar">Pilih gambar yang benar</string>
    <string name="tvBahasa"><u>bli</u></string>
    <string name="txt_card_game">Bapak</string>
    <string name="periksa">Periksa</string>
    <string name="luarbiasa">Luar Biasa</string>
    <string name="tvPertanyaan">Bagaimana cara mengucapkan “Selamat Siang” dalam Bahasa Bali ?</string>
    <string name="answerA">Rahajeng Pagi</string>
    <string name="pahamsatu">Aku baru mulai belajar Bahasa Bali</string>
    <string name="pahamdua">Aku tau beberapa kata dan frasa</string>
    <string name="pahamtiga">Aku bisa melakukan percakapan sederhana</string>
    <string name="pahamempat">Aku di tingkat menengah atau lebih tinggi</string>
    <string name="profil">Profil Akun</string>
    <string name="kontrol">Kontrol</string>
    <string name="syarat"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="tentang">Tentang Kita</string>
    <string name="back">Kembali</string>
    <string name="answerB">Rahajeng Semeng</string>
    <string name="answerC">Rahajeng Siang</string>
    <string name="answerD">Rahajeng Malam</string>
    <string name="txt_card_game2">Anak Perempuan</string>
    <string name="txt_card_game3">Nenek</string>
    <string name="txt_card_game4">Sepupu Laki-laki</string>
    <string name="txtBenar">Jawaban Benar</string>
    <string name="lanjut">lanjut</string>
    <string name="txtSalah">Jawaban Salah</string>
    <string name="txtygbenar">Jawaban yang benar adalah :</string>
    <string name="benar">benar</string>
    <string name="susun">Susun arti kalimat yang dikatakan Bale</string>
    <string name="txt1game3">Bapak</string>
    <string name="txt2game3">nenek</string>
    <string name="txt3game3">Kakek</string>
    <string name="txt4game3">Saya</string>
    <string name="txt5game3">Kamu</string>
    <string name="txt6game3">Kakak perempuan</string>
    <string name="pelajaran">Pelajaran Selesai!</string>
    <string name="xp">xp</string>
    <string name="nilaixp">65</string>
    <string name="waktu">waktu</string>
    <string name="txtwaktu">2 : 58</string>
    <string name="akurasi">akurasi</string>
    <string name="txtakurasi">63 %</string>
    <string name="menujupeta">menuju ke peta</string>
    <string name="sk"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="email">humas@undiksha.ac.id</string>
    <string name="github">balingo.github.com</string>
    <string name="instagram">\@balingo</string>
    <string name="twitter">\@balingo.twitter</string>
    <string name="location">Jln. Udayana No. 11, Singaraja,Kec. Buleleng, Kabupaten Buleleng, Bali</string>
    <string name="profile">Profile</string>
    <string name="nama">Muhammad Damas</string>
    <string name="user">MuhammadDa774237</string>
    <string name="tnggl">Bergabung Juni 2022</string>
    <string name="mengikuti">0 Mengikuti</string>
    <string name="pengikut">0 Pengikut</string>
    <string name="tambahkan">TAMBAHKAN TEMAN</string>
    <string name="statistik">Statistik</string>
    <string name="runtutan"><b>0</b>\nRuntutan Hari</string>
    <string name="totalxp"><b>507</b>\nTotal XP</string>
    <string name="liga">Liga saat ini</string>
    <string name="posisi"><b>0</b>\nPosisi 3 besar</string>
    <string name="kontak">Temukan teman anda di Balingo</string>
    <string name="temukan">Sinkronkan kontakmu untuk menemukan orang-orang yanng kamu kenal di Duolingo dengan mudah.</string>
    <string name="sinkronkan">SINKRONKAN KONTAK</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="penantang">Penantang</string>
    <string name="level1">Dapatkan 40 XP dalam tantangan berwaktu papan skor</string>
    <string name="nilaipenantang">0/40</string>
    <string name="membara">Membara</string>
    <string name="level2">Capai runtutan 7 hari</string>
    <string name="bijak">Orang Bijak</string>
    <string name="level3">Dapatkan 1000 XP</string>
    <string name="lihat">Lihat 8 lainnya</string>
    <string name="nilai">65</string>
    <string name="modul1">Modul 1</string>
    <string name="txtmodul1">Pelajari kalimat sederhana dan konsep dasar</string>
    <string name="modul2">Modul 2</string>
    <string name="txtmodul2">Pelajari frasa yang berguna untuk percakapan sehari-hari</string>
    <string name="modul3">Modul 3</string>
    <string name="txtmodul3">Memakai kata jamak</string>
    <string name="modul4">Modul 4</string>
    <string name="txtmodul4">Menggunakan kata yang lebih sopan</string>
    <string name="lanjutkan">lanjutkan</string>
    <string name="funfact">Fun Fact: Kopi termahal di dunia adalah Kopi Luwak yang berasal dari Bali!</string>
    <string name="upt">UPT Bahasa Bali</string>
    <string name="browser">https://intip.in/UPTBali</string>
    <string name="phone">0361246551</string>
</resources>