<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.game2.GameFrame2Fragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/ic_baseline_close_24"
                android:backgroundTint="#00FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:layout_gravity="center"
                android:src="@drawable/progress_bar"
                android:backgroundTint="#00FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/new_world_icon"
                android:backgroundTint="#00FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:textColor="#77FFDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_bold"
                android:text="@string/kosakata"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khula_bold"
            android:text="@string/pilihgambar"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:id="@+id/tvBahasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khula_bold"
            android:letterSpacing="0"
            android:text="@string/tvPertanyaan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/hind"
                android:textSize="14sp"
                app:rippleColor="@color/white"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:text="@string/answerA"
                android:textAllCaps="false"
                android:textColor="#FFF5F1"
                app:cornerRadius="15dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind"
                android:textSize="14sp"
                app:rippleColor="@color/white"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:text="@string/answerB"
                android:textAllCaps="false"
                android:textColor="#FFF5F1"
                app:cornerRadius="15dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind"
                android:textSize="14sp"
                app:rippleColor="@color/white"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:text="@string/answerC"
                android:textAllCaps="false"
                android:textColor="#FFF5F1"
                app:cornerRadius="15dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind"
                android:textSize="14sp"
                app:rippleColor="@color/white"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:text="@string/answerD"
                android:textAllCaps="false"
                android:textColor="#FFF5F1"
                app:cornerRadius="15dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btn_benar"
        android:layout_marginTop="620dp"
        app:cornerRadius="8dp"
        android:text="@string/luarbiasa"
        android:fontFamily="@font/khula_bold"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textColor="@color/secondary_dark"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btn_periksa"
        android:layout_marginTop="670dp"
        app:cornerRadius="8dp"
        android:text="@string/periksa"
        android:fontFamily="@font/khula_bold"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textColor="@color/secondary_dark"
        android:backgroundTint="#6DFF85"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <Button
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btn_lanjut"
        android:layout_marginTop="670dp"
        app:cornerRadius="8dp"
        android:text="@string/lanjut"
        android:fontFamily="@font/khula_bold"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textColor="@color/secondary_dark"
        android:backgroundTint="#6DFF85"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

</FrameLayout>