<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.opening.OpeningFrame1Fragment"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_balingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kodchasan_bold"
            android:text="@string/balingo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_bljr"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/hind"
            android:text="@string/belajar"
            android:textAlignment="center"
            android:textColor="@color/secondary_light"
            android:textSize="14sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMulai"
            android:text="@string/mulai"
            android:textSize="16sp"
            android:textColor="@color/main_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            app:cornerRadius="15dp"
            android:fontFamily="@font/khula_bold"
            android:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAkun"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sudah_punya_akun"
            app:strokeWidth="1dp"
            app:strokeColor="#D29F69"
            app:cornerRadius="15dp"
            android:backgroundTint="#00000000"
            android:fontFamily="@font/khula_bold"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>



</FrameLayout>